--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /ejercicio2_morena_gutierrez/ejercicio2_morena-gutierrez/target/
 /ejercicio3_morena_gutierrez/ejercicio3_morenag/target/
+/ejercicio4_morena_gutierrez/ejercicio4_morenag/target/
