--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /ejercicio2_morena_gutierrez/ejercicio2_morena-gutierrez/target/
 /ejercicio3_morena_gutierrez/ejercicio3_morenag/target/
 /ejercicio4_morena_gutierrez/ejercicio4_morenag/target/
+/ejercicio5_morena_gutierrez/ejercicio5_morenag/target/
